<resources>
    <string name="app_name">牛逼金融</string>
    <string name="txt_tab_1">首页</string>
    <string name="txt_tab_2">投资</string>
    <string name="txt_tab_3">发现</string>
    <string name="txt_tab_4">我的</string>
    <string name="txt_tab_singed">签到</string>
    <string name="txt_tab_service">服务</string>
    <string name="txt_tab_recommend">推荐好友</string>
    <string name="txt_tab_action">活动中心</string>
    <string name="txt_home_bottom_left">金额 %1$s</string>
    <string name="txt_home_bottom_right">期限 %1$s</string>
    <string name="txt_ivest">往期年化收益(%)</string>
    <string name="txt_money">金额</string>
    <string name="txt_mouth">期限(月)</string>
    <string name="txt_jifen">积分</string>
    <string name="txt_yue">余额</string>
    <string name="txt_fenshu">等级分数</string>
    <string name="txt_forget">忘记密码</string>
    <string name="txt_login">登录</string>
    <string name="txt_next">下一步</string>
    <string name="txt_regist">我已经阅读并同意所注册协议</string>
    <string name="txt_sign">注：\n 1、30天为一个周期，连续不间断签到，即可获取1150积分（30*10+50+300+500）\n 2、连续签到一个周期
    或是签到中断后，都会重新开始计算\n 3、积分有效期至今年12月31日24点止，积分商城上线前获得的积分有效期均从2017年2月1日算起\n
    4、最终解释权归本人所有</string>

    <string-array name="me_adapter">
        <item>资产统计</item>
        <item>投资项目</item>
        <item>交易明细</item>
        <item>回款日历</item>
        <item>实名认证</item>
        <item>我的礼包</item>
        <item>账户管理</item>
        <item>银行存管</item>
        <item>更多内容</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
