<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/txt_witch_theme">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">


    <TextView
        android:textStyle="bold"
        android:layout_gravity="center"
        android:id="@+id/tv_jifen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textSize="16sp"
        android:textColor="@color/txt_gray_theme"/>

    <TextView
        android:textSize="12sp"
        android:layout_marginTop="3dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_jifen"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">


        <TextView
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/tv_yue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="16sp"
            android:textColor="@color/txt_gray_theme"/>

        <TextView
            android:textSize="12sp"
            android:layout_marginTop="3dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_yue"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">


        <TextView
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/tv_fenshu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:textSize="16sp"
            android:textColor="@color/txt_gray_theme"/>

        <TextView
            android:textSize="12sp"
            android:layout_marginTop="3dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_fenshu"/>

    </LinearLayout>



</LinearLayout>